<frontend> add hero section v1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/signin_signup.css">
     <title>Sally's</title>
@@ -10,21 +11,32 @@
 <body>
     <div class="container">
         <div class="hearo">
-            <div class="display_flex_center balck_bgc">
-                <div class="logo">
+            <div class="header display_flex_center balck_bgc">
+                <div class="right-header logo">
                     <a href="index.html">Sally's</a>
                 </div>
-                <div class="display_flex">
+                <div class="left_header display_flex">
+                    <input type="search" name="search1" id="search-feald" placeholder="search product">
                     <button id="btn_transparent">
                     Sign in
                     </button>
-                    <input type="search" name="search1" id="search-feald" placeholder="search product">
-                      
                 </div>
             </div>
+            <div class="hearo_container display_flex">
+                <div class="left_part">
+                    <h1>welcom to Sally's</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nam autem temporibus, molestiae porro nobis nisi provident? Maiores, cupiditate repudiandae.</p>
+                </div>
+                <div class="right_part">
+                    <img class="image" src="assets/images/copy-removebg-preview.png" alt="">
+                </div>
+            </div>
+
         </div>
-        <div class="categories"></div>
-        <div class="foter"></div>
+        <div class="categories">
+            
+        </div>
+        <div class="footer"></div>
     </div>
 
     <div id="id01" class="modal">
@@ -42,15 +54,14 @@
         </div>
     </div>
 
-    <div id="id02" class="modal display_flex">
+    <div id="id02" class="modal">
         <div class="modal-content">
             <div class="sign-container">
                <span onclick="document.getElementById('id02').style.display='none'; " class="close" title="close">&times;</span>
                 <h1>Sally's signup</h1>
-                <input type="text" name="firstName" placeholder="Username or email" required>
-                <input type="password" name="pssword" placeholder="Password" required>
-                <input type="text" name="firstName" placeholder="Username or email" required>
-                <input type="password" name="pssword" placeholder="Password" required>
+                <input type="text" name="firstName" placeholder="Full name" required>
+                <input type="password" name="pssword" placeholder="Username or email" required>
+                <input type="text" name="firstName" placeholder="Password" required>
                 <p>Already have an account?&nbsp; <a href="#" id="back_signin">Signin</a></p>
                 <div class="clearfix">
                 <button type="submit" class="login-button">signup</button>
