<frontend> ass categories section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/signin_signup.css">
+    <link rel="stylesheet" href="styles/categories.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -33,9 +34,53 @@
             </div>
 
         </div>
-        <div class="categories">
-            
-        </div>
+            <div class="services" id="services">
+                <h2 class="main-title">Categories</h2>
+                <div class="container">
+                    <div class="box">
+                    <i class="fas fa-user-shield fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                    </div>
+                    <div class="box">
+                    <i class="fas fa-tools fa-4x"></i>
+                    <h3>Fixing Issues</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                    </div>
+                    <div class="box">
+                    <i class="fas fa-map-marked-alt fa-4x"></i>
+                    <h3>Location</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                    </div>
+                    <div class="box">
+                    <i class="fas fa-laptop-code fa-4x"></i>
+                    <h3>Coding</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                    </div>
+                    <div class="box">
+                    <i class="fas fa-palette fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Design</a>
+                    </div>
+                    </div>
+                    <div class="box">
+                    <i class="fas fa-bullhorn fa-4x"></i>
+                    <h3>Marketing</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                    </div>
+                </div>
+            </div>
         <div class="footer"></div>
     </div>
 
