<frontend> update header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,78 +10,20 @@
     <title>Sally's</title>
 </head>
 <body>
-    <div class="container">
-        <div class="hearo">
-            <div class="header display_flex_center balck_bgc">
-                <div class="right-header logo">
-                    <a href="index.html">Sally's</a>
-                </div>
-                <div class="left_header display_flex">
-                    <input type="search" name="search1" id="search-feald" placeholder="search product">
-                    <button id="btn_transparent">
-                    Sign in
-                    </button>
-                </div>
-            </div>
-            <div class="hearo_container display_flex">
-                <div class="left_part">
-                    <h1>welcom to Sally's</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nam autem temporibus, molestiae porro nobis nisi provident? Maiores, cupiditate repudiandae.</p>
-                </div>
-                <div class="right_part">
-                    <img class="image" src="assets/images/copy-removebg-preview.png" alt="">
-                </div>
-            </div>
-
+    <div id="header">
+        <div class="logo">Sally's</div>
+        <div id="navlinks">
+            <ul>
+                <li id="home">Home</li>
+                <li class="nav-hover">Services</li>
+                <li class="nav-hover">Trending</li>
+                <li class="nav-hover">Reviews</li>
+                <li class="nav-hover">Contact</li>
+                <li id="heart" class="nav-hover"><i class="fa-solid fa-heart"></i></li>
+                <li id="cart" class="nav-hover"><i class="fa-solid fa-cart-shopping"></i></li>
+                <li id="profile" class="nav-hover"><i class="fa-solid fa-user"></i></li>
+            </ul>
         </div>
-            <div class="services" id="services">
-                <h2 class="main-title">Categories</h2>
-                <div class="container">
-                    <div class="box">
-                    <i class="fas fa-user-shield fa-4x"></i>
-                    <h3>Security</h3>
-                    <div class="info">
-                        <a href="#">Details</a>
-                    </div>
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-tools fa-4x"></i>
-                    <h3>Fixing Issues</h3>
-                    <div class="info">
-                        <a href="#">Details</a>
-                    </div>
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-map-marked-alt fa-4x"></i>
-                    <h3>Location</h3>
-                    <div class="info">
-                        <a href="#">Details</a>
-                    </div>
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-laptop-code fa-4x"></i>
-                    <h3>Coding</h3>
-                    <div class="info">
-                        <a href="#">Details</a>
-                    </div>
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-palette fa-4x"></i>
-                    <h3>Security</h3>
-                    <div class="info">
-                        <a href="#">Design</a>
-                    </div>
-                    </div>
-                    <div class="box">
-                    <i class="fas fa-bullhorn fa-4x"></i>
-                    <h3>Marketing</h3>
-                    <div class="info">
-                        <a href="#">Details</a>
-                    </div>
-                    </div>
-                </div>
-            </div>
-        <div class="footer"></div>
     </div>
 
     <div id="id01" class="modal">
