--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/signin_signup.css">
-    <link rel="stylesheet" href="styles/categories.css">
+    <link rel="stylesheet" href="styles/hero.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -23,6 +23,15 @@
                 <li id="cart" class="nav-hover"><i class="fa-solid fa-cart-shopping"></i></li>
                 <li id="profile" class="nav-hover"><i class="fa-solid fa-user"></i></li>
             </ul>
+        </div>
+    </div>
+    <div id="section1" class="hero">
+        <img src="assets/images/main_.jpg" alt="">
+        <div id="slogan">
+            <h1><span>Sally's</span> Store</h1>
+            <h1>Your <span>comfort Matters</span></h1>
+            <br>
+            <button id="login">Login</button>
         </div>
     </div>
 
