<frontend> add services section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/signin_signup.css">
     <link rel="stylesheet" href="styles/hero.css">
+    <link rel="stylesheet" href="styles/services.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -32,6 +34,33 @@
             <h1>Your <span>comfort Matters</span></h1>
             <br>
             <button id="login">Login</button>
+        </div>
+    </div>
+
+    <div id="section2" class="services">
+        <h1>Our <span>Services</span></h1>
+        <div id="services">
+            <div class="s1">
+                <h1>24/7 Customer <span>Support</span></h1>
+                <br>
+                
+                <a class="s" href=""><i class="fa-solid fa-headset"></i></i></a>
+            </div>
+            <div class="s1">
+                <h1>Superfast <span>Delivery</span></h1>
+                <br>
+                <a class="s" href=""><i class="fa-solid fa-truck-fast"></i></a>
+            </div>
+            <div class="s1">
+                <h1>Easy <span>Returns</span></h1>
+                <br>
+                <a class="s" href=""><i class="fa-solid fa-sack-dollar"></i></a>
+            </div>
+            <div class="s1">
+                <h1>User <span>Satisfaction</span></h1>
+                <br>
+                <a class="s" href=""><i class="fa-solid fa-face-smile"></i></a>
+            </div>
         </div>
     </div>
 
