<frontend> add trending items section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/signin_signup.css">
     <link rel="stylesheet" href="styles/hero.css">
     <link rel="stylesheet" href="styles/services.css">
+    <link rel="stylesheet" href="styles/trending.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -61,6 +62,101 @@
                 <br>
                 <a class="s" href=""><i class="fa-solid fa-face-smile"></i></a>
             </div>
+        </div>
+    </div>
+
+    <div id="section3" class="trending">
+        <h1><span>Trending</span> Items</h1>
+        <div id="trending">
+            <div class="t1">
+                <a href=""><i class="fa-solid fa-heart"></i></a>
+                <br>
+                <br>
+                <img src="assets/images/main_.jpg" alt="">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <h3>$199</h3>
+                <div class="buy-cart">
+                    <button class="buy">Buy Now</button>
+                    <button class="buy">Add to cart</button>
+                </div>
+            </div>
+            <div class="t1">
+                <a href=""><i class="fa-solid fa-heart"></i></a>
+                <br>
+                <br>
+                <img src="assets/images/main_.jpg" alt="" width="300px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <h3>$199</h3>
+                <div class="buy-cart">
+                    <button class="buy">Buy Now</button>
+                    <button class="buy">Add to cart</button>
+                </div>
+            </div>
+            <div class="t1">
+                <a href=""><i class="fa-solid fa-heart"></i></a>
+                <br>
+                <br>
+                <img src="assets/images/main_.jpg" alt="" width="300px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <h3>$199</h3>
+                <div class="buy-cart">
+                    <button class="buy">Buy Now</button>
+                    <button class="buy">Add to cart</button>
+                </div>
+            </div>
+            <div class="t1">
+                <a href=""><i class="fa-solid fa-heart"></i></a>
+                <br>
+                <br>
+                <img src="assets/images/main_.jpg" alt="" width="300px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <h3>$199</h3>
+                <div class="buy-cart">
+                    <button class="buy">Buy Now</button>
+                    <button class="buy">Add to cart</button>
+                </div>
+            </div>
+            
         </div>
     </div>
 
