<frontend> add reviews section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/hero.css">
     <link rel="stylesheet" href="styles/services.css">
     <link rel="stylesheet" href="styles/trending.css">
+    <link rel="stylesheet" href="styles/reviews.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -157,6 +158,69 @@
                 </div>
             </div>
             
+        </div>
+    </div>
+
+    <div id="section4" class="reviews">
+        <h1>Top <span>Reviews</span></h1>
+        <div id="reviews">
+            <div class="r1">
+                <img src="assets/images/main_.jpg" alt="" width="50px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                   Quibusdam aspernatur, magni sapiente expedita ducimus eos, 
+                   ad maxime dolor iste rerum quos optio! 
+                </p>
+            </div>
+            <div class="r1">
+                <img src="assets/images/main_.jpg" alt="" width="50px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                   Quibusdam aspernatur, magni sapiente expedita ducimus eos, 
+                   ad maxime dolor iste rerum quos optio! 
+                </p>
+            </div>
+            <div class="r1">
+                <img src="assets/images/main_.jpg" alt="" width="50px">
+                <br>
+                <br>
+                <div class="stars">
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-solid fa-star"></i></a>
+                    <a href=""><i class="fa-sharp fa-regular fa-star"></i></a>
+                </div>
+                <br>
+                <br>
+                <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                   Quibusdam aspernatur, magni sapiente expedita ducimus eos, 
+                   ad maxime dolor iste rerum quos optio! 
+                </p>
+            </div>
         </div>
     </div>
 
