<frontend> add contact section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/services.css">
     <link rel="stylesheet" href="styles/trending.css">
     <link rel="stylesheet" href="styles/reviews.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -224,6 +225,17 @@
         </div>
     </div>
 
+    <div id="section5" class="contact">
+        <h1><span>Contact</span> Us</h1>
+        <div class="form">
+            <input type="text" placeholder="name" id="name">
+            <input type="text" placeholder="email" id="email">
+            <input type="number" placeholder="phone" id="phone">
+            <textarea id="textarea" cols="10" rows="5" placeholder="your message"></textarea>
+            <button class="query">Submit</button>
+        </div>
+    </div>
+
     <div id="id01" class="modal">
         <div class="modal-content">
             <div class="sign-container">
@@ -254,6 +266,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="scripts/script.js"></script>
 </body>
