<frontend> add footer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/trending.css">
     <link rel="stylesheet" href="styles/reviews.css">
     <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <title>Sally's</title>
 </head>
 <body>
@@ -234,6 +235,39 @@
             <textarea id="textarea" cols="10" rows="5" placeholder="your message"></textarea>
             <button class="query">Submit</button>
         </div>
+    </div>
+
+    <div id="footer">
+        <div class="logo">Sally's</div>
+        <div class="list">
+            <h2>Services</h2>
+            <ul>
+                <li>Blog</li>
+                <li>Contact</li>
+                <li>work</li>
+            </ul>
+        </div>
+        <div class="list">
+            <h2>Services</h2>
+            <ul>
+                <li>About</li>
+                <li>privacy policy</li>
+                <li>Terms & Conditions</li>
+            </ul>
+        </div>
+        <div class="list" id="social">
+            <h2>Follow</h2>
+            <ul>
+                <li><i class="fa-brands fa-youtube"></i></li>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <div id="copyright">
+        <h4>&#169; Copyright 2023 Sally's all rights reserved</h4>
     </div>
 
     <div id="id01" class="modal">
