<frontend> add navigation

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,14 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="signin_signup.css">
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/signin_signup.css">
+    <link rel="stylesheet" href="styles/admin.css">
     <title>Dashboard</title>
 </head>
 <body>
     <div class="container">
-        
+        <div class="navigation">
+            <div class="prof">
+                <div class="user">
+                    <img src="assets/images/main_.jpg" alt="">
+                </div>
+                <p>User Name</p>
+            </div>
+            <ul>
+                <li>
+                    <div>
+                        <span><i class="fa-solid fa-house"></i></span>
+                        <span class="text">Dashboard</span>
+                    </div>
+                </li>
+                <li>
+                    <div id="show_users">
+                        <span><i class="fa-solid fa-id-badge"></i></span>
+                        <span class="text">Customers</span>
+                    </div>
+                </li>
+                <li>
+                    <div id="show_products">
+                        <span><i class="fa-solid fa-sitemap"></i></span>
+                        <span>Products</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span><i class="fa-solid fa-file-invoice-dollar"></i></span>
+                        <span class="text">Orders</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span><i class="fa-solid fa-lock"></i></span>
+                        <span class="text">Passwords</span>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <span><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
+                        <span class="text">Sign out</span>
+                    </div>
+                </li>
+                
+            </ul>
+        </div>
     </div>
 
 
