<frontend> add view customers and products section

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -95,6 +95,78 @@
                     </div>
                 </div>
             </div>
+
+            <div id="customer" class="customer">
+                <button id="add_user">Add New User</button>
+                <table id="my_table">
+                    <thead>
+                        <tr><th>User_id</th><th>User_name</th><th>User_email</th><th>User_password</th><th>Update_User</th><th>Delete_User</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">sally</td>
+                            <td contenteditable="true">s@s.com</td>
+                            <td contenteditable="true">******</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">sally</td>
+                            <td contenteditable="true">s@s.com</td>
+                            <td contenteditable="true">******</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">sally</td>
+                            <td contenteditable="true">s@s.com</td>
+                            <td contenteditable="true">******</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
+            <div id="product" class="customer">
+                <button id="add_product">Add New Product</button>
+                <table id="my_table">
+                    <thead>
+                        <tr><th>Product_id</th><th>Product_name</th><th>Product_desc</th><th>Product_price</th><th>Update_Product</th><th>Delete_Product</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">1</td>
+                            <td contenteditable="true">Iphone 14</td>
+                            <td contenteditable="true">Apple</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">sally</td>
+                            <td contenteditable="true">s@s.com</td>
+                            <td contenteditable="true">******</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+                        <tr>
+                            <td >1</td>
+                            <td contenteditable="true">sally</td>
+                            <td contenteditable="true">s@s.com</td>
+                            <td contenteditable="true">******</td>
+                            <td><i class="fa-solid fa-pen"></i></td>
+                            <td><i class="fa-solid fa-trash"></i></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
