<frontend> add some functionalities

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -168,6 +168,47 @@
                 </table>
             </div>
         </div>
+
+        <div id="id01" class="modal">
+            <div class="modal-content">
+                <div class="sign-container">
+                   <span  onclick="document.getElementById('id01').style.display='none'; "class="close" title="close">&times;</span>
+                    <h1>Add User</h1>
+                    <input type="text" placeholder="Full Name" required>
+                    <input type="text" placeholder="User Email" required>
+                    <input type="password" placeholder="Password" required>
+                    <select name="" id="">
+                        <option selected="true" disabled="disabled">Select role</option>
+                        <option value="1">Admin</option>
+                        <option value="2">Customer</option>
+                    </select>
+                    <div class="clearfix">
+                    <button type="submit" class="login-button" >Add</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="id02" class="modal">
+            <div class="modal-content">
+                <div class="sign-container">
+                   <span  onclick="document.getElementById('id02').style.display='none'; "class="close" title="close">&times;</span>
+                    <h1>Add Product</h1>
+                    <input type="text" placeholder="Product Name" required>
+                    <input type="text" placeholder="Product Desctiption" required>
+                    <input type="password" placeholder="Product price" required>
+                    <select name="" id="">
+                        <option selected="true" disabled="disabled">Select category</option>
+                        <option value="1">Screen</option>
+                        <option value="2">Phone</option>
+                        <option value="3">Laptop</option>
+                        <option value="4">Accessories</option>
+                    </select>
+                    <div class="clearfix">
+                    <button type="submit" class="login-button" >Add</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
