<frontend> add animation to the main image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,13 +32,13 @@
         </div>
     </div>
     <div id="section1" class="hero">
-        <img src="assets/images/main_.jpg" alt="">
         <div id="slogan">
             <h1><span>Sally's</span> Store</h1>
             <h1>Your <span>comfort Matters</span></h1>
             <br>
             <button id="login">Login</button>
         </div>
+        <img class="image" src="assets/images/main_.jpg" alt="">
     </div>
 
     <div id="section2" class="services">
