--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -58,6 +58,7 @@
                 </li>
                 
             </ul>
+            <div id="data"></div>
         </div>
 
         <div class="right">
@@ -98,12 +99,12 @@
 
             <div id="customer" class="customer">
                 <button id="add_user">Add New User</button>
-                <table id="my_table">
+                <table id="customer_table">
                     <thead>
                         <tr><th>User_id</th><th>User_name</th><th>User_email</th><th>User_password</th><th>Update_User</th><th>Delete_User</th></tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <td >1</td>
                             <td contenteditable="true">sally</td>
                             <td contenteditable="true">s@s.com</td>
@@ -126,7 +127,7 @@
                             <td contenteditable="true">******</td>
                             <td><i class="fa-solid fa-pen"></i></td>
                             <td><i class="fa-solid fa-trash"></i></td>
-                        </tr>
+                        </tr> -->
 
                     </tbody>
                 </table>
@@ -134,12 +135,12 @@
 
             <div id="product" class="customer">
                 <button id="add_product">Add New Product</button>
-                <table id="my_table">
+                <table id="product_table">
                     <thead>
                         <tr><th>Product_id</th><th>Product_name</th><th>Product_desc</th><th>Product_price</th><th>Update_Product</th><th>Delete_Product</th></tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <td >1</td>
                             <td contenteditable="true">1</td>
                             <td contenteditable="true">Iphone 14</td>
@@ -162,7 +163,7 @@
                             <td contenteditable="true">******</td>
                             <td><i class="fa-solid fa-pen"></i></td>
                             <td><i class="fa-solid fa-trash"></i></td>
-                        </tr>
+                        </tr> -->
 
                     </tbody>
                 </table>
